# snodec-forum-webapp

./: .gitignore  CMakeLists.txt  README.md  db.mysql  dbsetup.cpp  dbsetup.h  main.cpp  utils.cpp  utils.h
public/: app.js  index.html  middleware.js  routes.js
public/css/: styles.css
public/js/: events.js
public/js/api/: api-service.js
public/views/: genericError.html  home.html  loginForm.html  newPostForm.html  newSubtopicForm.html  newThreadForm.html  registerForm.html  subtopic.html  thread.html
public/views/partials/: header.html  loginStatus.html  navigation.html  posts.html  subtopics.html  threads.html
